Bug fixes on mobile

--- a/css/mainCSS.css
+++ b/css/mainCSS.css
@@ -305,6 +305,19 @@ a:hover{
     margin: 0px 0;
     line-height: 170%;
   }
+  .project-info {
+  	padding: 15px;
+  }
+  .wrapper-button{
+    margin-top: 15%;
+  }
+  .text_centre{
+      width: 100%;
+      left: 50%;
+      /*top: 45%;
+      left: 20%;
+      transform: translateY(-50%);*/
+  }
 }
 @media (max-width: 650px) {
   .intro{
